--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.71.8",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-paper": "^5.8.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
