--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-paper": "^5.8.0",
+    "react-native-radio-buttons-group": "^3.0.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
