--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-dialog": "^9.3.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-paper": "^5.8.0",
     "react-native-radio-buttons-group": "^3.0.2",
