--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Advance",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./app/assets/icon.png",
+    "icon": "./app/assets/Advance-squareLogo.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./app/assets/splash.png",
