--- a/eas.json
+++ b/eas.json
@@ -1,20 +1,25 @@
 {
   "cli": {
-    "version": ">= 3.13.3"
+    "version": ">= 3.13.3",
+    "promptToConfigurePushNotifications": false
   },
   "build": {
     "development": {
       "developmentClient": true,
       "distribution": "internal"
+      
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      }
     },
     "production": {}
   },
   "submit": {
     "production": {
-      "ios":{
+      "ios": {
         "appleId": "danielcha0131@gmail.com",
         "ascAppId": "6450328657",
         "appleTeamId": "P4SU2JYARB"
