--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-dialog": "^9.3.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gifted-charts": "^1.2.42",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-paper": "^5.8.0",
     "react-native-radio-buttons-group": "^3.0.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10"
   },
